src/App.css
html,
body {
  height: 100%;
  
}

#root {
  display: grid;
  grid-template-rows: auto 1fr ;
  min-height: 100%;
}

.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}
.nav__links {
  display: flex;
  list-style-type: none;
  text-decoration: none;
}
.nav__links li + li {
  padding-left: 1em;
}
.nav-link {
  text-decoration: none;
  color: inherit;
}
.content--wide {
  margin-top: 7em;
  margin-left: 24.4em;
  margin-right: 8em;
  text-align: justify;
}
.content--narrow {
  margin-top: 7em;
  margin-left: 2em;
  margin-right: 2em;
  text-align: justify;
}
.toolbar--wide{
  margin-top: -1.65em !important ;
  margin-left: 0.8em !important
}
.toolbar--narrow{
  margin-top: -1.21em !important ;
  margin-left: 0.8em !important
}
.input--narrow{
  margin-left:0 !important
}
.table--wide{
  max-width: 32em;
  overflow-y: scroll;
}
.table--narrow{
  max-width:32em;
  overflow-y: scroll ;
}
.meal{
  width:32em;
  display:grid;
  grid-template-columns:2fr 2fr 1fr
  
}

